crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badShaderId.usdc
version https://git-lfs.github.com/spec/v1
oid sha256:a36fd242af558c148b186d9ff54f55ace6f3f087513b90e88a7baf778a2c7432
size 716
